<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ofpay</groupId>
    <artifactId>FourthPay-hermes</artifactId>
    <version>2.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <description>
        2013-9-29 更新纪录
        将仓库地址从
        http://192.168.100.87:8081/
        修改为
        http://nexus.dev.ofpay.com/

        2013-8-28 更新纪录
        将参数中内存使用1024修改为：-Xmx1500m -XX:MaxPermSize=256m


        2013-7-13 更新纪录
        相对1.0.16的更新
        cobar-client组建增加对slf4j-jcl的排除

        2013-7-11 更新纪录
        相对1.0.15的更新
        1、更新dubbo版本到2.4.10
        2、更新memcache版本到1.4.1
        3、更新slf4j版本到1.7.5
        4、更新mina版本到2.0.7
        5、更新cobarclient版本到1.0.3-update2
        6、更新junit版本到4.11
        7、更新joda-time版本到2.2
        8、更新h2database版本到1.3.172

        相对1.0.15的增加
        1、增加spring ldap 1.3.1－RELEASE
        2、增加logback 1.0.12版本
        3、增加 Apache Commons 3 组建
        4、增加mybatis 3.2.0版本
        5、增加oracle ojdbc6 11.1.0.7.0版本
        6、增加validation-api接口和实现
    </description>

    <properties>
        <maven.compiler.source>1.6</maven.compiler.source>
        <maven.compiler.target>1.6</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <dubbo.version>2.4.10</dubbo.version>
        <springframework.version>3.1.1.RELEASE</springframework.version>
        <spring.ldap.version>1.3.1.RELEASE</spring.ldap.version>
        <quartz.version>1.6.3</quartz.version>
        <activemq.version>5.5.1</activemq.version>
        <jackson.version>1.9.8</jackson.version>
        <slf4j.version>1.7.5</slf4j.version>
        <mina.version>2.0.7</mina.version>
        <mina.spring.version>1.1.7</mina.spring.version>
        <redisclient.version>2.1.0</redisclient.version>
        <httpcomponents.version>4.1.3</httpcomponents.version>
        <aspectj.version>1.6.12</aspectj.version>
        <unitils.version>3.3</unitils.version>
        <cobarclient.version>1.0.3-update2</cobarclient.version>
        <logback.version>1.0.12</logback.version>
        <dubbo.version>2.4.10</dubbo.version>
        <springframework.version>3.2.4.RELEASE</springframework.version>
        <unitils.version>3.3</unitils.version>
        <httpcomponents.version>4.2.4</httpcomponents.version>
        <sitemesh.version>2.4.2</sitemesh.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <!-- SpringFramework -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${springframework.version}</version>
                <exclusions>
                    <!-- Exclude Commons Logging in favor of SLF4j -->
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context-support</artifactId>
                <version>${springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-jdbc</artifactId>
                <version>${springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-orm</artifactId>
                <version>${springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-aop</artifactId>
                <version>${springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${springframework.version}</version>
            </dependency>

            <!-- Spring LDAP -->
            <dependency>
                <groupId>org.springframework.ldap</groupId>
                <artifactId>spring-ldap-core</artifactId>
                <version>1.3.1.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ldap</groupId>
                <artifactId>spring-ldap-core-tiger</artifactId>
                <version>1.3.1.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ldap</groupId>
                <artifactId>spring-ldap-odm</artifactId>
                <version>1.3.1.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ldap</groupId>
                <artifactId>spring-ldap-ldif-core</artifactId>
                <version>1.3.1.RELEASE</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.ldap</groupId>
                <artifactId>spring-ldap-ldif-batch</artifactId>
                <version>1.3.1.RELEASE</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${springframework.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>net.sourceforge.groboutils</groupId>
                <artifactId>groboutils-core</artifactId>
                <version>5</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.dbunit</groupId>
                <artifactId>dbunit</artifactId>
                <version>2.4.9</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.unitils</groupId>
                <artifactId>unitils-dbunit</artifactId>
                <version>${unitils.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.unitils</groupId>
                <artifactId>unitils-spring</artifactId>
                <version>${unitils.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.unitils</groupId>
                <artifactId>unitils-mock</artifactId>
                <version>${unitils.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.unitils</groupId>
                <artifactId>unitils-inject</artifactId>
                <version>${unitils.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.unitils</groupId>
                <artifactId>unitils-io</artifactId>
                <version>${unitils.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Logger -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.5</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>1.0.12</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.0.12</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.janino</groupId>
                <artifactId>janino</artifactId>
                <version>2.6.1</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>1.7.5</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>1.7.5</version>
            </dependency>

            <!-- JSR 303 with Hibernate Validator -->
            <dependency>
                <groupId>javax.validation</groupId>
                <artifactId>validation-api</artifactId>
                <version>1.0.0.GA</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>4.1.0.Final</version>
            </dependency>

            <!-- Servlet -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>3.0.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.servlet.jsp</groupId>
                <artifactId>jsp-api</artifactId>
                <version>2.2</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>jstl</artifactId>
                <version>1.2</version>
            </dependency>

            <!-- Mybatis -->
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>3.2.0</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>1.2.0</version>
            </dependency>

            <!-- Jdbc Mysql & Oracle-->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>5.1.24</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>com.oracle</groupId>
                <artifactId>ojdbc6</artifactId>
                <version>11.1.0.7.0</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>oracle</groupId>
                <artifactId>ojdbc14</artifactId>
                <version>10.2.0.2.0</version>
                <scope>runtime</scope>
            </dependency>

            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.3.172</version>
            </dependency>

            <!-- Apache Dbcp -->
            <dependency>
                <groupId>commons-dbcp</groupId>
                <artifactId>commons-dbcp</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>net.ju-n.commons-dbcp-jmx</groupId>
                <artifactId>commons-dbcp-jmx-jdbc4</artifactId>
                <version>0.2.2</version>
            </dependency>

            <!-- Apache Httpclient -->
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${httpcomponents.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpcore</artifactId>
                <version>${httpcomponents.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient-cache</artifactId>
                <version>${httpcomponents.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpmime</artifactId>
                <version>${httpcomponents.version}</version>
            </dependency>

            <!-- Apache Mina -->
            <dependency>
                <groupId>org.apache.mina</groupId>
                <artifactId>mina-http</artifactId>
                <exclusions>
                    <exclusion>
                        <artifactId>mina-core</artifactId>
                        <groupId>org.apache.mina</groupId>
                    </exclusion>
                </exclusions>
                <version>2.0.7</version>
            </dependency>
            <dependency>
                <groupId>org.apache.mina</groupId>
                <artifactId>mina-core</artifactId>
                <version>2.0.7</version>
            </dependency>

            <!-- Apache Commons -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>3.2</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.1</version>
            </dependency>

            <dependency>
                <groupId>commons-collections</groupId>
                <artifactId>commons-collections</artifactId>
                <version>3.2.1</version>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.7</version>
            </dependency>

            <!-- Joda Time -->
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>2.2</version>
            </dependency>

            <!-- JSON -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>1.1.31</version>
            </dependency>

            <!-- Jackson JSON Processor -->
            <dependency>
                <groupId>org.codehaus.jackson</groupId>
                <artifactId>jackson-mapper-asl</artifactId>
                <version>1.8.1</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.jackson</groupId>
                <artifactId>jackson-core-asl</artifactId>
                <version>1.8.1</version>
            </dependency>

            <!-- dubbo log -->
            <dependency>
                <groupId>com.ofpay</groupId>
                <artifactId>interfacelog</artifactId>
                <version>1.0.6-RELEASE</version>
            </dependency>

            <!-- memcached -->
            <dependency>
                <groupId>com.googlecode.xmemcached</groupId>
                <artifactId>xmemcached</artifactId>
                <version>1.4.1</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.caches</groupId>
                <artifactId>mybatis-ehcache</artifactId>
                <version>1.0.2</version>
            </dependency>
            <dependency>
                <groupId>net.sf.ehcache</groupId>
                <artifactId>ehcache-jgroupsreplication</artifactId>
                <version>1.7</version>
            </dependency>

            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjrt</artifactId>
                <version>1.7.3</version>
            </dependency>
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjweaver</artifactId>
                <version>1.7.3</version>
            </dependency>

            <!-- jms -->
            <dependency>
                <groupId>org.apache.activemq</groupId>
                <artifactId>activemq-core</artifactId>
                <version>5.7.0</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-jms</artifactId>
                <version>${springframework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.xbean</groupId>
                <artifactId>xbean-spring</artifactId>
                <version>3.13</version>
            </dependency>
            <dependency>
                <groupId>javax.jms</groupId>
                <artifactId>jms</artifactId>
                <version>1.1</version>
            </dependency>

            <!-- quarz -->
            <dependency>
                <groupId>org.quartz-scheduler</groupId>
                <artifactId>quartz</artifactId>
                <version>2.2.1</version>
            </dependency>

            <!-- sitemesh -->
            <dependency>
                <groupId>opensymphony</groupId>
                <artifactId>sitemesh</artifactId>
                <version>${sitemesh.version}</version>
                <scope>runtime</scope>
            </dependency>

        </dependencies>

    </dependencyManagement>

    <distributionManagement>
        <repository>
            <id>ofpay-releases</id>
            <name>releases</name>
            <url>https://repository-zjh459.forge.cloudbees.com/release</url>
        </repository>

        <snapshotRepository>
            <id>ofpay-snapshots</id>
            <name>snapshots</name>
            <url>https://repository-zjh459.forge.cloudbees.com/snapshot</url>
        </snapshotRepository>
    </distributionManagement>

    <modules>
        <module>FourthPay-hermes-bean</module>
        <module>FourthPay-hermes-core</module>
        <module>FourthPay-hermes-web</module>
    </modules>
    
</project>